--- a/src/main/resources/pages/index.html
+++ b/src/main/resources/pages/index.html
@@ -45,7 +45,7 @@
         $(document).ready(function(){
             $("#run").click(function(){
                 $.ajax({
-                    url: "/gaerminal/script",
+                    url: "script",
                     cache: true,
                     type: "POST",
                     traditional : true,
