can not load https

--- a/src/main/resources/pages/index.html
+++ b/src/main/resources/pages/index.html
@@ -14,7 +14,7 @@
         background-repeat: no-repeat;
     }
     #loading.active {
-        background: url("https://sue445.github.io/gaerminal/static/loading.gif");
+        background: url("http://sue445.github.io/gaerminal/static/loading.gif");
     }
     --></style>
 </head>
@@ -54,7 +54,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
-<script src="https://sue445.github.io/gaerminal/static/jquery.selection.js"></script>
+<script src="http://sue445.github.io/gaerminal/static/jquery.selection.js"></script>
 <script type="text/javascript">
     (function($){
         function runScript(script){
